[package]
name = "aiomsg-rs"
version = "0.1.0"
authors = ["Caleb Hattingh <caleb.hattingh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.6.5"
futures = "0.3.5"
log = "0.4"
pretty_env_logger = "0.4.0"
