[package]
name = "aiomsg-sync"
version = "2026.7.1"
edition = "2021"
rust-version = "1.75"
description = "Native synchronous (threaded) implementation of the aiomsg smart-socket protocol"
license = "Apache-2.0"
repository = "https://github.com/cjrh/aiomsg"
readme = "README.md"
keywords = ["socket", "network", "messaging", "threads", "blocking"]
categories = ["network-programming"]

[lib]
name = "aiomsg"
path = "src/lib.rs"

[features]
default = ["tls"]
# Optional TLS via rustls (ring crypto backend, no OpenSSL / C toolchain).
tls = ["dep:rustls"]

[dependencies]
bytes = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
# rustls with the pure-Rust `ring` provider only. rustls's default features pull
# in aws-lc-rs, which needs cmake + a C compiler; we deliberately avoid that.
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"], optional = true }

[dev-dependencies]
# Test/example helpers: generate self-signed certs and read PEM files. Pure Rust.
rcgen = "0.13"
rustls-pemfile = "2"
# Benchmark harness (default features: cargo_bench_support + plotters + rayon).
criterion = "0.5"

# The TLS demo only builds when the `tls` feature is on.
[[example]]
name = "tls"
required-features = ["tls"]

# Throughput/framing benchmarks. Uses bind_tls/connect_tls, so it needs `tls`
# (a default feature); run with the default `cargo bench`.
[[bench]]
name = "throughput"
harness = false
required-features = ["tls"]

# Optimized release builds: this crate exists for performance-sensitive
# messaging, so trade compile time for better cross-module inlining.
# `panic = "abort"` is deliberately NOT set: the sync crate relies on
# unwind-and-join semantics in its worker threads.
[profile.release]
lto = "thin"
codegen-units = 1
