[package]
name = "client"
version = "0.1.0"
authors = ["Caleb Hattingh <caleb.hattingh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aiomsg-rs = { path = "../../../aiomsg-rs" }
anyhow = "1.0.33"

[dependencies.async-std]
version = "1.6.5"
features = ["attributes"]
